CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(bmod)

SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS TRUE)

SET(CMAKE_MODULE_PATH
  ${CMAKE_MODULE_PATH}
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
  )

IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE MinSizeRel) 
ENDIF()

INCLUDE(platform)
INCLUDE(target)

ADD_SUBDIRECTORY(src)

MESSAGE(STATUS "BUILD TYPE: ${CMAKE_BUILD_TYPE}")
